kuber/1.5/multitool-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: default
spec:
  selector:
    app: backend
  ports:
    - name: multitool
      protocol: TCP
      port: 9002
      targetPort: 1180
