kuber/1.5/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: default
spec:
  selector:
    app: frontend
  ports:
    - name: nginx
      protocol: TCP
      port: 9001
      targetPort: 80
